// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters ChapterFilter matches snapshot when it is closed 1`] = `
.c3 {
  overflow: visible;
  position: relative;
}

.c6 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
}

.c4 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
}

.c4 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
  width: 100%;
}

.c0 {
  position: relative;
  z-index: 2;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #fff;
  border-bottom: 0.1rem solid #d5d5d5;
}

.c0 .c5 {
  font-weight: bold;
}

.c0 .c2 > *:not(.c5) {
  top: calc(100% - 0.1rem);
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  max-height: calc(100vh - 26rem);
}

@media screen and (max-width:75em) {
  .c4 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 .c2 > *:not(.c5) {
    max-height: calc(100vh - 18.4rem);
  }
}

@media screen and (max-width:30em) {
  .c0 .c2 {
    position: initial;
  }

  .c0 .c2 > *:not(.c5) {
    top: auto;
    margin-top: -0.1rem;
  }
}

@media print {
  .c0 {
    padding-left: 0;
  }
}

@media print {
  .c0 > *:not(.FiltersList-sc-1sdnk9e-4) {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={false}
        aria-label="Select Practice Questions by Chapter & Section"
        className="plain-button c4 dropdown-toggle c5 "
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="c6"
            direction="down"
            viewBox="0 0 320 512"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Filters ChapterFilter matches snapshot when open with selected section 1`] = `
.c3 {
  overflow: visible;
  position: relative;
}

.c17 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
}

.c7 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  padding-top: 0;
  padding-bottom: 0.2rem;
}

.c9 {
  padding: 0;
  border: none;
  margin: 0;
}

.c9 legend {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

.c4 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
  z-index: 2;
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  -webkit-clip-path: inset(0 -0.6rem 0px -0.6rem);
  clip-path: inset(0 -0.6rem 0px -0.6rem);
  background-color: #fff;
  border-left: 0.1rem solid #d5d5d5;
  border-right: 0.1rem solid #d5d5d5;
}

.c4 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
  width: 100%;
}

.c0 {
  position: relative;
  z-index: 2;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #fff;
  border-bottom: 0.1rem solid #d5d5d5;
}

.c0 .c5 {
  font-weight: bold;
}

.c0 .c2 > *:not(.c5) {
  top: calc(100% - 0.1rem);
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  max-height: calc(100vh - 26rem);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-x: hidden;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  margin-left: 0.8rem;
}

.c16 > * {
  overflow: hidden;
}

.c16 .os-text {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-overflow: ellipsis;
}

.c16 .os-divider {
  margin: 0 0.4rem;
}

.c13 {
  width: 400px;
  border-bottom: 1px solid #d5d5d5;
  overflow: visible;
}

.c14 {
  display: block;
  width: 100%;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c14 .c15 {
  float: left;
  margin-left: 0;
  text-align: left;
}

.c14 .c6 {
  float: right;
}

.c14::after {
  content: "";
  display: table;
  clear: both;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  width: 100%;
  text-align: left;
  font-size: 1.4rem;
  color: #424242;
}

.c19[aria-current="true"] {
  color: #027EB5;
}

.c19:hover,
.c19:focus {
  background-color: #f1f1f1;
  color: #0064A0;
}

.c19 .c15 {
  padding-left: 2.5rem;
  width: 95%;
}

.c18 {
  overflow: visible;
}

.c8 {
  color: #424242;
  background: #fff;
  font-size: 1.4rem;
  padding: 0.8rem 1.6rem;
  outline: none;
  overflow: auto;
  z-index: 1;
}

.c8 .c20 {
  margin: 0.8rem 0 0.8rem 0.8rem;
}

.c8 .c21 {
  padding: 0.8rem;
}

.c8 .c22 {
  margin: 0 1.6rem 0 1.6rem;
}

.c8 .c12:last-child {
  border-bottom: none;
}

@media screen and (max-width:75em) {
  .c4 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 .c2 > *:not(.c5) {
    max-height: calc(100vh - 18.4rem);
  }
}

@media screen and (max-width:30em) {
  .c0 .c2 {
    position: initial;
  }

  .c0 .c2 > *:not(.c5) {
    top: auto;
    margin-top: -0.1rem;
  }
}

@media print {
  .c0 {
    padding-left: 0;
  }
}

@media print {
  .c0 > *:not(.FiltersList-sc-1sdnk9e-4) {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c10 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    overflow: hidden;
  }
}

@media screen and (max-width:30em) {
  .c13 {
    width: 100%;
  }
}

@media screen and (max-width:30em) {
  .c8 {
    width: calc(100vw - 1.6rem);
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={true}
        aria-label="Select Practice Questions by Chapter & Section"
        className="plain-button c4 dropdown-toggle c5 "
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="c6 c7"
            direction="up"
            viewBox="0 0 320 512"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <div
        className="dropdown-menu"
      >
        <div
          className="c8 practice-questions-chapter-filters"
          id="practice-filter-chapter"
          tabIndex={-1}
        >
          <fieldset
            className="c9"
          >
            <legend>
              Filter by chapters
            </legend>
            <div
              className="c10"
            >
              <ul
                aria-label="Filter by chapters"
                className="c11"
              >
                <li>
                  <div
                    className="c12 c13"
                  >
                    <button
                      aria-controls="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                      aria-expanded={false}
                      className="plain-button c14"
                      onClick={[Function]}
                    >
                      <span
                        className="c15 c16"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "chapterId",
                          }
                        }
                      />
                      <svg
                        aria-hidden="true"
                        className="c6 c17"
                        direction="down"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      aria-hidden={true}
                      className="c18"
                      hidden={true}
                      id="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                    >
                      <button
                        aria-label="Select Practice Questions by  section1"
                        className="plain-button c19"
                        data-analytics-label="Filter PQ by  section1"
                        onClick={[Function]}
                      >
                        <span
                          className="c15 c16"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section1",
                            }
                          }
                        />
                      </button>
                      <button
                        aria-label="Select Practice Questions by  section2"
                        className="plain-button c19"
                        data-analytics-label="Filter PQ by  section2"
                        onClick={[Function]}
                      >
                        <span
                          className="c15 c16"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section2",
                            }
                          }
                        />
                      </button>
                    </div>
                  </div>
                </li>
                <li>
                  <div
                    className="c12 c13"
                  >
                    <button
                      aria-controls="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                      aria-expanded={true}
                      className="plain-button c14"
                      onClick={[Function]}
                    >
                      <span
                        className="c15 c16"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "chapterId2",
                          }
                        }
                      />
                      <svg
                        aria-hidden="true"
                        className="c6 c7"
                        direction="up"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      aria-hidden={false}
                      className="c18"
                      hidden={false}
                      id="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                    >
                      <button
                        aria-current="true"
                        aria-label="Select Practice Questions by  section21"
                        className="plain-button c19"
                        data-analytics-label="Filter PQ by  section21"
                        onClick={[Function]}
                      >
                        <span
                          className="c15 c16"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section21",
                            }
                          }
                        />
                      </button>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filters ChapterFilter matches snapshot when open without selected section 1`] = `
.c3 {
  overflow: visible;
  position: relative;
}

.c17 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
}

.c7 {
  color: #5e6062;
  width: 1rem;
  height: 2rem;
  margin-left: 0.8rem;
  padding-top: 0.2rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  padding-top: 0;
  padding-bottom: 0.2rem;
}

.c9 {
  padding: 0;
  border: none;
  margin: 0;
}

.c9 legend {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

.c4 {
  position: relative;
  border-left: 0.1rem solid transparent;
  border-right: 0.1rem solid transparent;
  z-index: 2;
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  -webkit-clip-path: inset(0 -0.6rem 0px -0.6rem);
  clip-path: inset(0 -0.6rem 0px -0.6rem);
  background-color: #fff;
  border-left: 0.1rem solid #d5d5d5;
  border-right: 0.1rem solid #d5d5d5;
}

.c4 > div {
  padding: 2rem 2.4rem;
  outline: none;
  color: #424242;
  font-size: 1.6rem;
  color: #5e6062;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: visible;
  width: 100%;
}

.c0 {
  position: relative;
  z-index: 2;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #fff;
  border-bottom: 0.1rem solid #d5d5d5;
}

.c0 .c5 {
  font-weight: bold;
}

.c0 .c2 > *:not(.c5) {
  top: calc(100% - 0.1rem);
  box-shadow: 0 0 0.6rem 0 rgba(0,0,0,0.2);
  max-height: calc(100vh - 26rem);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-x: hidden;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  margin-left: 0.8rem;
}

.c16 > * {
  overflow: hidden;
}

.c16 .os-text {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-overflow: ellipsis;
}

.c16 .os-divider {
  margin: 0 0.4rem;
}

.c13 {
  width: 400px;
  border-bottom: 1px solid #d5d5d5;
  overflow: visible;
}

.c14 {
  display: block;
  width: 100%;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c14 .c15 {
  float: left;
  margin-left: 0;
  text-align: left;
}

.c14 .c6 {
  float: right;
}

.c14::after {
  content: "";
  display: table;
  clear: both;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 4rem;
  width: 100%;
  text-align: left;
  font-size: 1.4rem;
  color: #424242;
}

.c19[aria-current="true"] {
  color: #027EB5;
}

.c19:hover,
.c19:focus {
  background-color: #f1f1f1;
  color: #0064A0;
}

.c19 .c15 {
  padding-left: 2.5rem;
  width: 95%;
}

.c18 {
  overflow: visible;
}

.c8 {
  color: #424242;
  background: #fff;
  font-size: 1.4rem;
  padding: 0.8rem 1.6rem;
  outline: none;
  overflow: auto;
  z-index: 1;
}

.c8 .c20 {
  margin: 0.8rem 0 0.8rem 0.8rem;
}

.c8 .c21 {
  padding: 0.8rem;
}

.c8 .c22 {
  margin: 0 1.6rem 0 1.6rem;
}

.c8 .c12:last-child {
  border-bottom: none;
}

@media screen and (max-width:75em) {
  .c4 > div {
    padding: 1rem 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 .c2 > *:not(.c5) {
    max-height: calc(100vh - 18.4rem);
  }
}

@media screen and (max-width:30em) {
  .c0 .c2 {
    position: initial;
  }

  .c0 .c2 > *:not(.c5) {
    top: auto;
    margin-top: -0.1rem;
  }
}

@media print {
  .c0 {
    padding-left: 0;
  }
}

@media print {
  .c0 > *:not(.FiltersList-sc-1sdnk9e-4) {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c10 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    overflow: hidden;
  }
}

@media screen and (max-width:30em) {
  .c13 {
    width: 100%;
  }
}

@media screen and (max-width:30em) {
  .c8 {
    width: calc(100vw - 1.6rem);
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={true}
        aria-label="Select Practice Questions by Chapter & Section"
        className="plain-button c4 dropdown-toggle c5 "
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="c6 c7"
            direction="up"
            viewBox="0 0 320 512"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <div
        className="dropdown-menu"
      >
        <div
          className="c8 practice-questions-chapter-filters"
          id="practice-filter-chapter"
          tabIndex={-1}
        >
          <fieldset
            className="c9"
          >
            <legend>
              Filter by chapters
            </legend>
            <div
              className="c10"
            >
              <ul
                aria-label="Filter by chapters"
                className="c11"
              >
                <li>
                  <div
                    className="c12 c13"
                  >
                    <button
                      aria-controls="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                      aria-expanded={false}
                      className="plain-button c14"
                      onClick={[Function]}
                    >
                      <span
                        className="c15 c16"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "chapterId",
                          }
                        }
                      />
                      <svg
                        aria-hidden="true"
                        className="c6 c17"
                        direction="down"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      aria-hidden={true}
                      className="c18"
                      hidden={true}
                      id="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                    >
                      <button
                        aria-label="Select Practice Questions by  section1"
                        className="plain-button c19"
                        data-analytics-label="Filter PQ by  section1"
                        onClick={[Function]}
                      >
                        <span
                          className="c15 c16"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section1",
                            }
                          }
                        />
                      </button>
                      <button
                        aria-label="Select Practice Questions by  section2"
                        className="plain-button c19"
                        data-analytics-label="Filter PQ by  section2"
                        onClick={[Function]}
                      >
                        <span
                          className="c15 c16"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section2",
                            }
                          }
                        />
                      </button>
                    </div>
                  </div>
                </li>
                <li>
                  <div
                    className="c12 c13"
                  >
                    <button
                      aria-controls="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                      aria-expanded={false}
                      className="plain-button c14"
                      onClick={[Function]}
                    >
                      <span
                        className="c15 c16"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "chapterId2",
                          }
                        }
                      />
                      <svg
                        aria-hidden="true"
                        className="c6 c17"
                        direction="down"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      aria-hidden={true}
                      className="c18"
                      hidden={true}
                      id="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                    >
                      <button
                        aria-label="Select Practice Questions by  section21"
                        className="plain-button c19"
                        data-analytics-label="Filter PQ by  section21"
                        onClick={[Function]}
                      >
                        <span
                          className="c15 c16"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section21",
                            }
                          }
                        />
                      </button>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;
